--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    <script src="../assets/js/main.js"></script>
+    <script src="main.js"></script>
     <script>
         AOS.init();
     </script>
