--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <aside class="sidebar">
             <ul>
                 <li><a href="index.html">🏠 الرئيسية</a></li>
-                <li><a href="pages/users.html">👥 إدارة المستخدمين</a></li>
-                <li><a href="pages/tasks.html">📝 إدارة المهام</a></li>
-                <li><a href="pages/performance.html">📊 تقييم الأداء</a></li>
-                <li><a href="pages/settings.html">⚙️ الإعدادات</a></li>
-                <li><a href="pages/support.html">📞 الدعم</a></li>
+                <li><a href="users.html">👥 إدارة المستخدمين</a></li>
+                <li><a href="tasks.html">📝 إدارة المهام</a></li>
+                <li><a href="performance.html">📊 تقييم الأداء</a></li>
+                <li><a href="settings.html">⚙️ الإعدادات</a></li>
+                <li><a href="support.html">📞 الدعم</a></li>
                 <li class="logout"><a href="#">🚪 تسجيل الخروج</a></li>
             </ul>
         </aside>
