--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
     <div class="dashboard-container">
+        <button class="menu-toggle" onclick="toggleMenu()">☰</button>
         <!-- الشريط الجانبي -->
         <aside class="sidebar">
             <ul>
