--- a/tasks.html
+++ b/tasks.html
@@ -8,18 +8,22 @@
 </head>
 <body>
 
-    <div class="dashboard-container">
-        <aside class="sidebar">
-            <ul>
-                <li><a href="index.html">🏠 الرئيسية</a></li>
-                <li><a href="users.html">👥 إدارة المستخدمين</a></li>
-                <li><a href="tasks.html">📝 إدارة المهام</a></li>
-                <li><a href="performance.html">📊 تقييم الأداء</a></li>
-                <li><a href="settings.html">⚙️ الإعدادات</a></li>
-                <li><a href="support.html">📞 الدعم</a></li>
-                <li class="logout"><a href="#">🚪 تسجيل الخروج</a></li>
-            </ul>
-        </aside>
+   <div class="dashboard-container">
+    <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+
+    <!-- الشريط الجانبي -->
+    <aside class="sidebar">
+        <ul>
+            <li><a href="index.html">🏠 الرئيسية</a></li>
+            <li><a href="users.html">👥 إدارة المستخدمين</a></li>
+            <li><a href="tasks.html">📝 إدارة المهام</a></li>
+            <li><a href="performance.html">📊 تقييم الأداء</a></li>
+            <li><a href="settings.html">⚙️ الإعدادات</a></li>
+            <li><a href="support.html">📞 الدعم</a></li>
+            <li class="logout"><a href="#">🚪 تسجيل الخروج</a></li>
+        </ul>
+    </aside>
+
 
         <main class="main-content">
             <header>
