--- a/index.html
+++ b/index.html
@@ -24,15 +24,18 @@
         </ul>
     </aside>
 
-        <!-- المحتوى الرئيسي -->
-        <main class="main-content">
-            <header>
-                <h1>لوحة التحكم</h1>
-                <div class="user-info">
-                    <span id="user-role">دكتور</span>
-                    <img src="user-avatar.png" alt="User Avatar">
-                </div>
-            </header>
+    <!-- المحتوى الرئيسي -->
+    <main class="main-content">
+        <header>
+            <h1>لوحة التحكم</h1>
+            <div class="user-info">
+                <span id="user-role">دكتور</span>
+                <img src="user-avatar.png" alt="User Avatar">
+            </div>
+        </header>
+    </main>
+</div>
+
 
             <section class="cards">
                 <div class="card" data-aos="fade-up">
